--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,16 +32,19 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  isa: ^1.0.0
+  isar: ^3.0.5
   isar_flutter_libs: ^3.0.5
   stock: ^1.0.1
   pocketbase: ^0.6.0
+  flutter_quill: ^6.2.0
+  fluttertoast: ^8.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   isar_generator: ^3.0.5
+  build_runner: ^2.3.3
 flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
