--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   pocketbase: ^0.6.0
   flutter_quill: ^6.2.0
   fluttertoast: ^8.1.2
+  json_annotation: ^4.7.0
+  connectivity_plus: ^3.0.2
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +48,12 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   isar_generator: ^3.0.5
   build_runner: ^2.3.3
+  json_serializable: ^6.5.4
+  mockito: ^5.3.2
 flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - .env
