--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   json_annotation: ^4.7.0
   connectivity_plus: ^3.0.2
   flutter_dotenv: ^5.0.2
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
